Added connection between users and tasks
