# internal/handlers/taskHandlers.go
@@ -16,6 +16,30 @@ type Handler struct {
 	Service *taskService.TaskService
 }
 
+func (h *Handler) GetTasksUserUserId(ctx context.Context, request tasks.GetTasksUserUserIdRequestObject) (tasks.GetTasksUserUserIdResponseObject, error) {
+	// Получаем user_id из запроса
+	userID := request.UserId
+
+	// Обращаемся к сервису для получения задач пользователя
+	userTasks, err := h.Service.GetTasksByUserID(uint(userID))
+	if err != nil {
+		return nil, err
+	}
+
+	// Формируем ответ
+	response := tasks.GetTasksUserUserId200JSONResponse{}
+	for _, tsk := range userTasks {
+		task := tasks.Task{
+			Id:     &tsk.ID,
+			Task:   &tsk.Task,
+			IsDone: &tsk.IsDone,
+		}
+		response = append(response, task)
+	}
+
+	return response, nil
+}
+
 func (h *Handler) GetTasks(_ context.Context, _ tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
 	// Получение всех задач из сервиса
 	allTasks, err := h.Service.GetAllTasks()
@@ -48,6 +72,7 @@ func (h *Handler) PostTasks(_ context.Context, request tasks.PostTasksRequestObj
 	taskToCreate := taskService.Task{
 		Task:   *taskRequest.Task,
 		IsDone: *taskRequest.IsDone,
+		UserID: *taskRequest.UserId,
 	}
 	createdTask, err := h.Service.CreateTask(taskToCreate)
 
@@ -75,6 +100,7 @@ func (h *Handler) PatchTasksId(ctx context.Context, request tasks.PatchTasksIdRe
 	taskToUpdate := taskService.Task{
 		Task:   *taskRequest.Task,   // Если поле не пустое, обновим
 		IsDone: *taskRequest.IsDone, // Если поле не пустое, обновим
+		UserID: *taskRequest.UserId,
 	}
 	updatedTask, err := h.Service.UpdateTaskByID(request.Id, taskToUpdate)
 
